# pr-review-notifier

./: .gitignore  .odbc.ini  Aptfile  Makefile  Pipfile  README.md  app.py  config.py  config_template.py  database.py  deploy_heroku.md  deploy_lambda.md  init_database.sql  notifier.py  pyproject.toml  requirements.txt  test_payload.json  utils.py  zappa_settings.json
app/: __main__.py  main.py  notifier.py  utils.py  wsgi.py
test/: payload_labeled.json  payload_submitted.json
