[tool.poetry]
name = "pr-review-notifier"
version = "0.1.0"
description = "GitHub PRs review notifications"
authors = ["Misha Behersky <bmwant@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7"
aiopg = "^0.16.0"
attrs = "^19.1"
aioauth-client = "^0.16.2"
aiohttp-session = "^2.7"
cryptography = "^2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
