[tool.poetry]
name = "pr-review-notifier"
version = "0.2.0"
description = "GitHub PRs review notifications"
authors = ["Misha Behersky <bmwant@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
# aiopg = "^0.16.0"
attrs = "^19.1"
aioauth-client = "^0.16.2"
aiohttp-session = "^2.7"
cryptography = "^2.7"
aiohttp = "^3.8.3"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
