[tool.poetry]
name = "pr-review-notifier"
version = "0.2.0"
description = "GitHub PRs review notifications"
authors = ["Misha Behersky <bmwant@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
# aiopg = "^0.16.0"
attrs = "^19.1"
aioauth-client = "^0.16.2"
aiohttp-session = "^2.7"
cryptography = "^3.3"
aiohttp = "^3.8.3"
django-environ = "^0.9.0"
aiohttp-wsgi = "^0.10.0"

[tool.poetry.group.dev.dependencies]
zappa = "^0.55.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
